New GA account under HMPPS account commented out the previous one in layout.njk and app.js to be sure I will delete it when the first data will arrives in 48h

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -30,13 +30,23 @@
         <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-D3VVRQFQB8"></script>
+{#        <script async src="https://www.googletagmanager.com/gtag/js?id=G-D3VVRQFQB8"></script>#}
+{#        <script>#}
+{#          window.dataLayer = window.dataLayer || [];#}
+{#          function gtag(){dataLayer.push(arguments);}#}
+{#          gtag('js', new Date());#}
+
+{#          gtag('config', 'G-D3VVRQFQB8');#}
+{#        </script>#}
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106741063-19"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
-          gtag('config', 'G-D3VVRQFQB8');
+          gtag('config', 'UA-106741063-19');
         </script>
 
     {% endblock %}
