Content change: Bulk records list screen when 1 defendant on list

--- a/server/views/match-records.njk
+++ b/server/views/match-records.njk
@@ -37,11 +37,11 @@
         matchName: session.confirmedMatch.name,
         matchType: session.confirmedMatch.matchType
     }) }}
-
     <h1 class="govuk-heading-l">Defendants with possible NDelius records</h1>
 
     {% if tableData.rows | length %}
-        <p class="govuk-heading-m">{{ tableData.rows | length }} defendants partially match with existing records.</p>
+        {% set oneDefendant = 'defendant' if tableData.rows === 1 else 'defendants' %}
+        <p class="govuk-heading-m">{{ tableData.rows | length }} {{ oneDefendant }} partially match with existing records.</p>
         <p class="govuk-body">Review and confirm the correct record for each defendant.</p>
     {% else %}
         <p class="govuk-heading-m">All defendants have been matched with existing records.</p>
