Content change: Post-release status to Status

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -75,7 +75,7 @@
                 {% endif %}
 
                 {% if order.licenceConditions and order.licenceConditions | length %}
-                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Status</h3>
                     <p class="govuk-body">On licence</p>
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
@@ -87,7 +87,7 @@
                 {% endif %}
 
                 {% if order.pssRequirements and order.pssRequirements | length %}
-                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Post-release status</h3>
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Status</h3>
                     <p class="govuk-body">On post-sentence supervision (PSS)</p>
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
