:lipstick: Included heading for side navigation
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -6,7 +6,9 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <nav class="govuk-grid-column-one-quarter pac-hide--mobile">
+    <nav class="govuk-grid-column-one-quarter pac-hide--mobile" aria-label="Side navigation">
+
+      <h4 class="govuk-caption-l govuk-!-margin-top-0 govuk-!-margin-bottom-4">In this guide</h4>
 
       <p class="govuk-body">
         <a href="#ug-overview" class="govuk-link govuk-link--no-visited-state">Overview</a>
