--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -14,81 +14,88 @@
         <a href="#ug-overview" class="govuk-link govuk-link--no-visited-state">Overview</a>
       </p>
 
-      <p class="govuk-body">
+      <p class="govuk-body govuk-!-margin-bottom-2">
         <a href="#ug-getting-started" class="govuk-link govuk-link--no-visited-state">Getting started</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4  govuk-!-margin-bottom-2">
         <a href="#ug-signing-in" class="govuk-link govuk-link--no-visited-state">Signing in</a>
       </p>
       <p class="govuk-body-s govuk-!-margin-left-4">
         <a href="#ug-selecting-a-court" class="govuk-link govuk-link--no-visited-state">Selecting a court</a>
       </p>
 
-      <p class="govuk-body">
+      <p class="govuk-body govuk-!-margin-bottom-2">
         <a href="#ug-viewing-a-case-list" class="govuk-link govuk-link--no-visited-state">Viewing a case list</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-what-you-can-see-on-the-case-list" class="govuk-link govuk-link--no-visited-state">What you can see
           on the case list</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-applying-filters-to-a-case-list" class="govuk-link govuk-link--no-visited-state">Applying filters
           to a case list</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-viewing-case-lists-on-other-days" class="govuk-link govuk-link--no-visited-state">Viewing case
           lists on other days</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-updates-to-a-case-list" class="govuk-link govuk-link--no-visited-state">Updates to a case list</a>
       </p>
       <p class="govuk-body-s govuk-!-margin-left-4">
         <a href="#ug-recently-added-cases" class="govuk-link govuk-link--no-visited-state">Recently added cases</a>
       </p>
 
-      <p class="govuk-body">
+      <p class="govuk-body govuk-!-margin-bottom-2">
         <a href="#ug-viewing-a-case" class="govuk-link govuk-link--no-visited-state">Viewing a case</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-key-details" class="govuk-link govuk-link--no-visited-state">Key details</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-case-summary" class="govuk-link govuk-link--no-visited-state">Case summary</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-probation-record" class="govuk-link govuk-link--no-visited-state">Probation record</a>
       </p>
       <p class="govuk-body-s govuk-!-margin-left-4">
         <a href="#ug-risk-register" class="govuk-link govuk-link--no-visited-state">Risk register</a>
       </p>
 
-      <p class="govuk-body">
+      <p class="govuk-body govuk-!-margin-bottom-2">
         <a href="#ug-viewing-an-order" class="govuk-link govuk-link--no-visited-state">Viewing an order</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-community-orders" class="govuk-link govuk-link--no-visited-state">Community orders</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-custodial-orders" class="govuk-link govuk-link--no-visited-state">Custodial orders</a>
       </p>
       <p class="govuk-body-s govuk-!-margin-left-4">
         <a href="#ug-breach" class="govuk-link govuk-link--no-visited-state">Breach</a>
       </p>
 
-      <p class="govuk-body">
+      <p class="govuk-body govuk-!-margin-bottom-2">
         <a href="#ug-defendants-with-possible-ndelius-records" class="govuk-link govuk-link--no-visited-state">Defendants
           with possible NDelius records</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-reviewing-possible-records" class="govuk-link govuk-link--no-visited-state">Reviewing possible
           records</a>
       </p>
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
+        <a href="#ug-duplicate-records" class="govuk-link govuk-link--no-visited-state">Duplicate records</a>
+      </p>
+      <p class="govuk-body-s govuk-!-margin-left-4">
+        <a href="#ug-if-none-of-the-possible-records-are-the-defendant" class="govuk-link govuk-link--no-visited-state">If
+          none of the possible records are the defendant</a>
+      </p>
 
-      <p class="govuk-body">
+      <p class="govuk-body govuk-!-margin-bottom-2">
         <a href="#ug-linking-and-unlinking-ndelius-records" class="govuk-link govuk-link--no-visited-state">Linking and
           unlinking NDelius records</a>
       </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
+      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
         <a href="#ug-link-a-record-to-a-defendant" class="govuk-link govuk-link--no-visited-state">Link a record to a
           defendant</a>
       </p>
@@ -98,7 +105,7 @@
       </p>
 
     </nav>
-    <div class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-three-quarters pac-!-grid-column--max-700">
 
       <h1 class="govuk-heading-l">User guide</h1>
 
@@ -186,8 +193,7 @@
       <p class="govuk-body">You can see when a case list was last updated by looking at the time above the case list. It
         will also show when the list will next be updated.</p>
 
-      <p class="govuk-body"><strong class="govuk-!-font-weight-bold">Example</strong></p>
-
+      <p class="govuk-body">Example:</p>
       <p class="govuk-body">Wednesday 6 June: Case list for Wednesday 13 June appears in the service.</p>
       <p class="govuk-body">Update 1 - Monday 11 June at 12:00am: Case list for Wednesday 13 June updates with 6 new
         cases.</p>
@@ -310,13 +316,14 @@
       <p class="govuk-body">Check if any of the records match the defendant. If a record matches the defendant, select
         it and 'Confirm record'.</p>
 
-      <h4 class="govuk-body govuk-!-font-weight-bold">Duplicate records</h4>
+      <h3 class="govuk-heading-s" id="ug-duplicate-records">Duplicate records</h3>
 
       <p class="govuk-body">If the defendant has duplicate NDelius records, you should select 1 of the records to link
         to that defendant for the case and follow your existing processes for flagging duplicate records to the IT
         team.</p>
 
-      <p class="govuk-body">If none of the possible records are the defendant</p>
+      <h3 class="govuk-heading-s" id="ug-if-none-of-the-possible-records-are-the-defendant">If none of the possible
+        records are the defendant</h3>
 
       <p class="govuk-body">If none of the possible records match the defendant , click 'Can't see the correct record?'
         to either confirm the defendant does not have a probation record or to link them to a different record using an
