:sparkles: Created a11y autocomplete component
:sparkles: Created initial court selection/onboarding page

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -43,6 +43,11 @@
   }
 }
 
+.autocomplete__option {
+  @extend .govuk-body;
+  margin: 0;
+}
+
 body.js-enabled {
   .moj-js-hidden {
     @include govuk-visually-hidden;
