--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -29,6 +29,8 @@
 
         <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
 
+        <script src="/assets/accessible-autocomplete.min.js"></script>
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106741063-19"></script>
         <script>
