--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -4,4 +4,5 @@ $moj-page-width: $govuk-page-width;
 
 @import "node_modules/govuk-frontend/govuk/all";
 @import "node_modules/@ministryofjustice/frontend/moj/all";
+@import "node_modules/accessible-autocomplete/src/autocomplete";
 @import "app/all";
