--- a/server/views/components/accessible-autocomplete/template.njk
+++ b/server/views/components/accessible-autocomplete/template.njk
@@ -1,14 +1,22 @@
-<label for="{{ params.id }}" class="govuk-label govuk-!-margin-top-4">{{ params.label }}</label>
-{% if params.hint %}
-  <p class="govuk-hint govuk-!-margin-top-2 govuk-!-margin-bottom-3">{{ params.hint }}</p>
-{% endif %}
-<div class="autocomplete-wrapper">
-  <select id="{{ params.id }}" name="{{ params.name if params.name else params.id }}">
-    {% if params.instruction %}
-      <option value="">{{ params.instruction }}</option>
-    {% endif %}
-    {% for option in params.options %}
-      <option value="{{ option.value }}">{{ option.text }}</option>
-    {% endfor %}
-  </select>
+<div class="govuk-form-group{{ " govuk-form-group--error" if params.error }}">
+  <label for="{{ params.id }}" class="govuk-label govuk-!-margin-top-4">{{ params.label }}</label>
+  {% if params.hint %}
+    <p class="govuk-hint govuk-!-margin-top-2 govuk-!-margin-bottom-3">{{ params.hint }}</p>
+  {% endif %}
+  {% if params.error %}
+    <span id="{{ params.id }}-error" class="govuk-error-message">
+      <span class="govuk-visually-hidden">Error:</span>
+      {{ params.errorMessage }}
+    </span>
+  {% endif %}
+  <div class="autocomplete-wrapper">
+    <select id="{{ params.id }}" name="{{ params.name if params.name else params.id }}">
+      {% if params.instruction %}
+        <option value="">{{ params.instruction }}</option>
+      {% endif %}
+      {% for option in params.options %}
+        <option value="{{ option.value }}">{{ option.text }}</option>
+      {% endfor %}
+    </select>
+  </div>
 </div>
