--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -34,7 +34,7 @@
                     </li>
                     {% if not hideCourtLink %}}
                     <li class="moj-header__navigation-item">
-                        <a class="moj-header__navigation-link pac-sign-out-link" href="/select-court">Change court</a>
+                        <a class="moj-header__navigation-link pac-sign-out-link" href="/my-courts">My courts</a>
                     </li>
                     {% endif %}
                     <li class="moj-header__navigation-item">
