--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -37,7 +37,7 @@
             j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;var n=d.querySelector('[nonce]');
             n&&j.setAttribute('nonce',n.nonce||n.getAttribute('nonce'));f.parentNode.insertBefore(j,f);
-          })(window,document,'script','dataLayer',{{ googleAnalyticsKey }});</script>
+          })(window,document,'script','dataLayer','{{ googleAnalyticsKey }}');</script>
 
     {% endblock %}
 </head>
