Add accessibility statement to service

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -93,6 +93,10 @@
         {
           href: "/user-guide",
           text: "User guide"
+        },
+        {
+          href: "/accessibility-statement",
+          text: "Accessibility statement"
         }
       ]
     }
