--- a/server/views/accessibility-statement.njk
+++ b/server/views/accessibility-statement.njk
@@ -84,7 +84,7 @@
 
         <h3 class="govuk-heading-s">Non-compliance with the
             accessibility regulations</h3>
-        <ol class="govuk-list govuk-list--bullet">
+        <ol class="govuk-list govuk-list--number">
             <li>PDFs and other documents are not accessible in a number of ways including missing text alternatives and
                 missing document structure. This fails
                 <a href="https://www.w3.org/TR/WCAG21/#non-text-content"
