Add cookies banner

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -31,7 +31,7 @@
 
         <script src="/assets/accessible-autocomplete.min.js"></script>
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+{#        <!-- Global site tag (gtag.js) - Google Analytics -->#}
         <script nonce='{{ params.nonce }}'>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
               new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
             j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -48,6 +48,43 @@
 </script>
 
 <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+
+{% block bodyStart %}
+    {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
+
+    {% set html %}
+        <p>We use some essential cookies to make this service work.</p>
+        <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+    {% endset %}
+
+    {{ govukCookieBanner({
+        ariaLabel: "Cookies on Prepare a case for sentence",
+        messages: [
+            {
+                headingText: "Cookies on Prepare a case for sentence",
+                html: html,
+                actions: [
+                {
+                    text: "Accept analytics cookies",
+                    type: "button",
+                    name: "cookies",
+                    value: "accept"
+                },
+                {
+                    text: "Reject analytics cookies",
+                    type: "button",
+                    name: "cookies",
+                    value: "reject"
+                },
+                {
+                    text: "View cookies",
+                    href: "#cookies-page"
+                }
+            ]
+            }
+        ]
+    }) }}
+{% endblock %}
 
 {% block header %}
     {% include "./header.html" %}
