--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -52,7 +52,7 @@
 {% block bodyStart %}
     {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
 
-    {% set html %}
+    {% set cookiesBannerText %}
         <p>We use some essential cookies to make this service work.</p>
         <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
     {% endset %}
@@ -62,7 +62,7 @@
         messages: [
             {
                 headingText: "Cookies on Prepare a case for sentence",
-                html: html,
+                html: cookiesBannerText,
                 actions: [
                 {
                     text: "Accept analytics cookies",
