--- a/server/views/cookies-policy.njk
+++ b/server/views/cookies-policy.njk
@@ -8,14 +8,18 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <div class="cookie-settings__confirmation banner banner-with-tick" data-cookie-confirmation="true"
-                 role="group" tabindex="-1">
-                <h2 class="banner-title">Your cookie settings were saved</h2>
-                <a class="govuk_link cookie-settings__prev-page govuk-!-margin-top-1" href="#" data-module="track-click"
-                   data-track-category="cookieSettings" data-track-action="Back to previous page">
-                    Go back to the page you were looking at
-                </a>
-            </div>
+            {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+
+            {% set successBanner %}
+                <p class="govuk-notification-banner__heading">
+                    You’ve set your cookie preferences. <a class="govuk-notification-banner__link" href="#">Go back to the page you were looking at</a>.
+                </p>
+            {% endset %}
+
+            {{ govukNotificationBanner({
+                type: "success",
+                html: successBanner
+            }) }}
             <h1 class="govuk-heading-l">Cookies</h1>
             <p class="govuk-body">Cookies are small files saved on your phone, tablet or computer when you visit a
                 website.</p>
