Formatting column page

--- a/server/views/accessibility-statement.njk
+++ b/server/views/accessibility-statement.njk
@@ -6,6 +6,8 @@
 {% block navigation %}{% endblock %}
 
 {% block content %}
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Accessibility statement for Prepare a case for sentence</h1>
         <p class="govuk-body">This page only contains information about the Prepare a case for sentence service,
             available at
@@ -122,5 +124,6 @@
         <p class="govuk-body">This service was last tested on Thursday 25 March 2021. The test was carried out by the
             Ministry of Justice Assistive Technology Support Team.</p>
         <p class="govuk-body pac-secondary-text">Last updated: Wednesday 31 March 2021</p>
-
+        </div>
+    </div>
 {% endblock %}
