:recycle: Replaced inline style with new class
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -37,6 +37,10 @@ pac-\!-width-40 {
   width: 40%;
 }
 
+pac-\!-valign-bottom {
+  vertical-align: bottom;
+}
+
 .pac-inline-header-banner {
   line-height: 0.25;
 }
