--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -50,40 +50,43 @@
 <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
 
 {% block bodyStart %}
+    {% if not params.analyticsCookies %}
     {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
 
     {% set html %}
         <p>We use some essential cookies to make this service work.</p>
         <p>We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
     {% endset %}
-
-    {{ govukCookieBanner({
-        ariaLabel: "Cookies on Prepare a case for sentence",
-        messages: [
-            {
-                headingText: "Cookies on Prepare a case for sentence",
-                html: html,
-                actions: [
-                {
-                    text: "Accept analytics cookies",
-                    type: "button",
-                    name: "cookies",
-                    value: "accept"
-                },
-                {
-                    text: "Reject analytics cookies",
-                    type: "button",
-                    name: "cookies",
-                    value: "reject"
-                },
-                {
-                    text: "View cookies",
-                    href: "#cookies-page"
-                }
-            ]
-            }
-        ]
-    }) }}
+        <form action="/cookie-preference" method="post">
+            {{ govukCookieBanner({
+                ariaLabel: "Cookies on Prepare a case for sentence",
+                messages: [
+                    {
+                        headingText: "Cookies on Prepare a case for sentence",
+                        html: html,
+                        actions: [
+                        {
+                            text: "Accept analytics cookies",
+                            type: "submit",
+                            name: "cookies",
+                            value: "accept"
+                        },
+                        {
+                            text: "Reject analytics cookies",
+                            type: "submit",
+                            name: "cookies",
+                            value: "reject"
+                        },
+                        {
+                            text: "View cookies",
+                            href: "#cookies-page"
+                        }
+                    ]
+                    }
+                ]
+            }) }}
+        </form>
+    {% endif %}
 {% endblock %}
 
 {% block header %}
