--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -40,8 +40,9 @@
         {{ offences.push('</ol>') }}
     {% endif %}
     {% set defendantFullName = (item.name.forename1 + ' ' + item.name.surname) if (item.name.forename1 and item.name.surname) else item.defendantName %}
+    {% set a11yTitle = 'View case for defendant ' + defendantFullName | escape | properCase | removeTitle %}
     {%- set tableRow = [
-            { text: ('<a href="/' + params.courtCode + '/case/' + item.caseNo + '/summary" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + defendantFullName | escape | properCase | removeTitle + '</a>') | safe },
+            { text: ('<a href="/' + params.courtCode + '/case/' + item.caseNo + '/summary" class="pac-defendant-link govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | properCase | removeTitle + '</a>') | safe },
             { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate, 'YYYY-MM-DD').format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
             { text: offences | join('') | safe },
             { text: item.listNo },
@@ -108,16 +109,18 @@
 {% set lastestSnapshotTime = moment(params.snapshot).format('hh:mm') %}
 {% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
 {% set withinDateRange = currentDate.isBetween(moment(), params.addBusinessDays(moment(), params.totalDays - 1), 'day', '[]') %}
-{% set currentTab = 1 %}
 
-{% if params.subsection === 'added' %}
-    {% set currentTab = 2 %}
+{% if params.subsection === '' %}
+    {% set title = "Case list" %}
+{% elseif params.subsection === 'added' %}
+    {% set title = "Recently added cases" %}
 {% elseif params.subsection === 'removed' %}
-    {% set currentTab = 3 %}
+    {% set title = "Removed cases" %}
 {% endif %}
 
 {%- set listTabs = [{
     title: 'Case list',
+    a11yTitle: 'View current case list',
     link: '/' + params.courtCode + '/cases/' + today,
     current: params.subsection === ''
 }] -%}
@@ -125,6 +128,7 @@
 {% if params.addedCount > 0 %}
     {{ listTabs.push({
         title: 'Recently added',
+        a11yTitle: 'View list of recently added cases',
         link: '/' + params.courtCode + '/cases/' + today + '/added',
         current: params.subsection === 'added',
         count: params.addedCount
@@ -133,6 +137,7 @@
 {% if params.removedCount > 0 %}
     {{ listTabs.push({
         title: 'Removed cases',
+        a11yTitle: 'View list of removed cases',
         link: '/' + params.courtCode + '/cases/' + today + '/removed',
         current: params.subsection === 'removed',
         count: params.removedCount
@@ -232,8 +237,6 @@
         }) }}
     {% endif %}
 
-    <div id="case-list" aria-labelledby="tab_{{ currentTab }}">
-
     {% if tableData.rows | length %}
         {% block table %}
             <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list.{% endif %}</span>
@@ -246,8 +249,6 @@
         {% endif %}
         <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "No case list information available." }}</p>
     {% endif %}
-
-    </div>
 
     {% if totalPages > 1 %}
         {% block pagination %}
