--- a/server/views/components/tabs/template.njk
+++ b/server/views/components/tabs/template.njk
@@ -1,15 +1,17 @@
 <div class="govuk-!-margin-bottom-5">
     <span class="govuk-body-s pac-last-updated">{{ params.status }}</span>
     <h2 class="govuk-tabs__title">Case lists</h2>
-    <ul class="govuk-tabs__list" role="tablist" aria-label="Case list selection">
+    <nav aria-label="Case list navigation">
+        <ul class="govuk-tabs__list">
 
-        {% for item in params.items %}
-        <li class="govuk-tabs__list-item{% if item.current %} govuk-tabs__list-item--selected{% endif %}" role="presentation">
-            <a href="{{ item.link }}" class="govuk-link govuk-link--no-visited-state govuk-tabs__tab" id="tab_{{ loop.index }}" role="tab" aria-selected="{{ true if item.current else "false" }}" aria-controls="case-list">
-                {{ item.title }} {{ '(' + item.count + ')' if item.count >= 0 }}
-            </a>
-        </li>
-        {% endfor %}
+            {% for item in params.items %}
+            <li class="govuk-tabs__list-item{% if item.current %} govuk-tabs__list-item--selected{% endif %}" role="presentation">
+                <a href="{{ item.link }}" class="govuk-link govuk-link--no-visited-state govuk-tabs__tab" id="tab_{{ loop.index }}" aria-label="{{ item.a11yTitle }}{{ ' (' + item.count + ')' if item.count >= 0 }}"{% if item.current %} aria-current="location"{% endif %}>
+                    {{ item.title }} {{ '(' + item.count + ')' if item.count >= 0 }}
+                </a>
+            </li>
+            {% endfor %}
 
-    </ul>
+        </ul>
+    </nav>
 </div>
